[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://Art/needle.png" type="Texture" id=2]
[ext_resource path="res://Art/Nyan-Cat-PNG-Transparent.png" type="Texture" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.278431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -224.0
margin_right = 368.0
margin_bottom = -132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MenuButtons"]
margin_right = 168.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "START"

[node name="LoadButton" type="Button" parent="MenuButtons"]
margin_top = 24.0
margin_right = 168.0
margin_bottom = 44.0
text = "LOAD"

[node name="OptionsButton" type="Button" parent="MenuButtons"]
margin_top = 48.0
margin_right = 168.0
margin_bottom = 68.0
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="MenuButtons"]
margin_top = 72.0
margin_right = 168.0
margin_bottom = 92.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "QUIT"

[node name="CharacterImage" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -448.0
margin_top = 4.00003
margin_right = 452.0
margin_bottom = 524.0
rect_rotation = 0.368145
rect_scale = Vector2( 0.159248, 0.160017 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NeedleImage" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 84.0001
margin_right = -120.0
margin_bottom = 204.0
rect_rotation = 128.098
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MenuButtons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MenuButtons/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="MenuButtons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
